--- a/betta-next.css
+++ b/betta-next.css
@@ -863,8 +863,6 @@ button.dark:active:enabled {
 }
 
 .icon-button {
-  height: auto !important;
-  width: auto !important;
   padding: 0.5rem;
   border-radius: 2rem;
 }
@@ -909,7 +907,6 @@ button.dark:active:enabled {
 
 .icon-button .material-icons-round,
 .icon-button > .icon {
-  vertical-align: top;
   color: #000000;
   font-size: 1.8rem;
 }
